<resources>
    <string name="app_name">OELP</string>
    <string name="transition_root" translatable="false">transition_root</string>
    <string name="transition_image" translatable="false">transition_image</string>
    <string name="transition_bar" translatable="false">transition_bar</string>
    <string name="transition_fab" translatable="false">transition_fab</string>
    <string name="preference_file_name">oelp_shared_pref</string>
    <string name="please_enter_name">कृपया नाम दर्ज करे</string>
    <string name="please_enter_phone">Please Enter Valid Phone Number</string>
    <string name="please_enter_school">Please Enter School Name</string>
    <string name="please_select_state">राज्य चुनें</string>
    <string name="please_select_state_start">राज्य चुनें*</string>
    <string name="please_select_district">जिले का चयन करें</string>
    <string name="please_select_block">ब्लॉक का चयन करें</string>
    <string name="please_select_village">Please Enter Village</string>
    <string name="otp_has_been_sent_to_your_mobile">OTP has been sent to your mobile XXXXX X</string>
    <string name="please_enter_the_same"> Please enter the same</string>
    <string name="dummyotp">1</string>
    <string name="login_again">फिर से लॉगिन करें</string>
    <string name="ok">ठीक</string>
    <string name="insufficient_memory">"अपर्याप्त मेमॉरी"</string>
    <string name="error_downloading">वीडियो डाउनलोड करते समय त्रुटि!</string>
    <string name="couldnot_connect_to_server">सर्वर से कनेक्ट करने में त्रुटि!</string>
    <string name="couldnot_create_file">फ़ोल्डर निर्माण त्रुटि!</string>
    <string name="content_size_invalid">डाउनलोड फ़ाइल आकार सर्वर पर अमान्य!</string>
    <string name="media_sync">मीडिया सिंक</string>
    <string name="video_not_found">वीडियो अनुपलब्ध, सर्वर से लाने की कोशिश कर रहा है!></string>
    <string name="check_internet">कृपया इंटरनेट कनेक्शन की जाँच करें और पुनः प्रयास करें! </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="videos">वीडियो</string>
    <string name="faqs">सामान्य प्रश्न</string>
    <string name="q_a">क्यू एंड ए</string>
    <string name="units">यूनिट्स</string>
    <string name="aboutus">अबाउट अस</string>
    <string name="enrichment">इन्रिच्मन्ट</string>
    <string name="resend_code">पुन: कोड भेजे</string>
    <string name="submit">जमा करें</string>
    <string name="app_name_hindi">ऑरग्नाईजेशन फॉर अर्ली लिट्रसी प्रमोशन</string>
    <string name="name_hindi">नाम</string>
    <string name="select_state_hindi">राज्य चुनें</string>
    <string name="select_district_hindi">जिला चुनें</string>
    <string name="select_block_hindi">ब्लॉक चुनें</string>
    <string name="select_position_hindi">पद चुनें</string>
    <string name="school_hindi">स्कूल</string>
    <string name="register_hindi">पंजीकरण</string>
    <string name="next">आगामी</string>
    <string name="select_all_question">सभी प्रश्न अनिवार्य हैं ।।</string>
    <string name="activities">गतिविधि</string>
    <string name="cancel">रद्द करना</string>
    <string name="otpmessage1">ओ.टी.पी भेजा गया है आपके मोबाइल पर XXXXX X</string>
    <string name="otpmessage2">" कृपया दर्ज करें।"</string>
    <string name="otpToastMessage">"आपका ओ.टी.पी हटाएं xxxxxx को भेज दिया गया है"</string>
    <string name="enter_mobile_number">मोबाइल नंबर दर्ज करें</string>
    <string name="verification">सत्यापन</string>
    <string name="enter_code_here">यहाँ कोड दर्ज करें</string>
    <string name="please_enter_school_name">कृपया स्कूल का नाम दर्ज करें</string>
    <string name="please_select_position">कृपया प्रोफेशन का चयन करें</string>
    <string name="video_not_available_right_now">अभी वीडियो उपलब्ध नहीं है</string>
    <string name="no">नहीं</string>
    <string name="yes">हाँ</string>
    <string name="video_is_downloaded_to_play">वीडियो प्ले करने के लिए डाउनलोड किया गया है || क्या आप प्ले चाहते हैं?</string>
    <string name="video_not_available">वीडियो उपलब्ध नहीं</string>
    <string name="comingsoon">जल्द आ रहा है</string>
    <string name="SOMETHING_WRONG">कुछ तकनीकी गड़बड़ी हुई... </string>
    <string name="please_enter_OTP">Please Enter OTP</string>
    <string name="there_is_no_section_presents_in_this_unit">इस इकाई में कोई अनुभाग प्रस्तुत नहीं किया गया है</string>
    <string name="memory_is_not_there_to_download_the_videos">वीडियो डाउनलोड करने के लिए मेमोरी नहीं है</string>
    <string name="video_is_already_downlaoding_in_background">वीडियो पहले ही बैकग्राउंड में डाउनलोड हो रहा है</string>
    <string name="please_enter_mobile_number">कृपया मोबाइल नंबर दर्ज करें</string>
    <string name="please_enter_valid_mobile_number">कृपया मान्य मोबाइल नंबर दर्ज करें</string>
    <string name="you_are_offline">आप ऑफ़लाइन हैं, डेटा सिंक्रनाइज़ ऑफ़लाइन हैं</string>
    <string name="down_prog">Download in progress</string>
    <string name="down_comp">Download complete</string>
    <string name="background">Background</string>
    <string name="hund_perc">100%</string>
    <string name="preapar_video">Preparing Video :</string>
    <string name="eo_perc">0%</string>
    <string name="want_to_change_phone_number"><u>Want to change Phone Number?</u></string>
    <string name="enter_old_phone_no">Enter Old Phone No.</string>
    <string name="enter_new_phone_no">Enter New Phone No.</string>
    <string name="please_enter_same_name">Mobile No. does not matches</string>
    <string name="old_mobile_doesnt_exist">Entered old mobile no does not exist</string>
    <string name="double_back_exit">कृपया बाहर निकलने के लिए फिर से क्लिक करें</string>
    <string name="enrichment_park">Enrichment Park</string>
    <string name="name_start">नाम*</string>
    <string name="school1">स्कूल</string>
    <string name="village">ग्राम</string>
    <string name="groups">समूह</string>
    <string name="data_downloading">मीडिया डाउनलोडिंग ...</string>
    <string name="home">होम</string>
    <string name="welcome">स्वागत...</string>
    <string name="clear_otp">ओ.टी.पी हटाएं</string>
    <string name="register">रजिस्टर...</string>
    <string name="oelp_app_introduction">ओ.ई.एल.पी ऐप परिचय</string>
    <string name="about_us">जानकारी </string>
    <string name="logout">लॉगआउट</string>
    <string name="hiphen_question">-प्रशन</string>
    <string name="please_enter_valid_OTP">-कृपया वैध ओ.टी.पी दर्ज करें</string>
    <string name="coming_soon">जल्द आ रहा है...</string>
    <string name="there_is_no_question_to_display">प्रदर्शित करने के लिए कोई सवाल नहीं है</string>
    <string name="search_by_mobile_no">मोबाइल नंबर द्वारा खोजें</string>
    <string name="enter_group_name">समूह का नाम दर्ज करें</string>
    <string name="add_teacher">शिक्षक जोड़ें</string>
    <string name="data_not_found">डेटा नहीं मिला</string>
    <string name="create">क्रीएट</string>
    <string name="oops_no_message_found">No Message Found</string>
    <string name="load_more">load more</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_end_conversation">End this conversation</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_secure">Secure conversation</string>
    <string name="action_add_new_account">Add new account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete from roster</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="conference_details">Group chat details</string>
    <string name="title_activity_contact_details">Contact details</string>
    <string name="title_activity_sharewith">Share with conversation</string>
    <string name="title_activity_start_conversation">Start conversation</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="title_activity_choose_contacts">Choose contacts</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="x_unread_conversations">%d unread conversations</string>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your roster? The conversation associated with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="crash_report_title">Oelp has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of Oelp\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="type_message_here">Type message here</string>
</resources>