<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/rlMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greybkg">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMessage"
            android:layout_marginBottom="75dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <RelativeLayout
            android:id="@+id/moreLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/text_rounded"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_more"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlNoContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oops_no_message_found"
            android:textColor="@color/red"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/grey_border_button_round"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_emoji" />

                    <EditText
                        android:id="@+id/etMobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/montserrat_regular"
                        android:hint="@string/type_message_here"
                        android:inputType="text"
                        android:maxLength="10"
                        android:maxLines="1"

                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/et_text_size"
                        android:theme="@style/AppTheme.BLACKAccent" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_attchment" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/grey_border_button_round"
                    android:src="@drawable/ic_mic" />
            </RelativeLayout>


        </android.support.v7.widget.CardView>

    </RelativeLayout>


</RelativeLayout>
