<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="oelp.mahiti.org.newoepl.viewmodel.MobileLoginViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/layout_app_background_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".4" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="@string/welcome"
                            android:textColor="@color/white"
                            android:textSize="@dimen/heading_text_size" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".8"
                        android:orientation="vertical">

                        <!--<android.support.design.widget.TextInputLayout-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:focusableInTouchMode="true"-->
                            <!--android:textColorHint="@color/white"-->
                            <!--style="@style/LoginTextInputLayoutStyle"-->
                            <!--app:errorTextAppearance="@color/white"-->
                            <!--app:hintTextAppearance="@color/white">-->

                            <EditText
                                android:fontFamily="@font/montserrat_regular"
                                android:id="@+id/mobileNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:enabled="@{!viewModel.showProgresBar}"
                                android:hint="@string/enter_mobile_number"
                                android:imeOptions="actionDone"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:textSize="@dimen/et_text_size"
                                android:maxLines="1"
                                android:text="@={viewModel.phoneNo}"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white" />

                        <!--</android.support.design.widget.TextInputLayout>-->

                        <Button
                            android:id="@+id/btnSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_height"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/white_bkg_button"
                            android:enabled="@{!viewModel.showProgresBar}"
                            android:onClick="@{()->viewModel.onSubmitClick()}"
                            android:text="@string/submit"
                            android:textAllCaps="false"
                            android:fontFamily="@font/montserrat_medium"
                            android:textSize="@dimen/button_text_size"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                            android:textColor="@color/black" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp">

                            <ProgressBar
                                android:id="@+id/progressBar"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="8dp"
                                android:visibility="@{viewModel.showProgresBar? View.VISIBLE:View.INVISIBLE}" />

                        </RelativeLayout>




                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>